# EZLLM

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: install_llama_cpp.ps1  lm-service
src/ezllm/: __init__.py  cli.py
src/ezllm/compat/: api_contracts.py  control_page.html  control_page.py  logs_page.html  logs_page.py  workbench_page.html  workbench_page.py
src/ezllm/config/: defaults.py  loader.py  models.py
src/ezllm/logs/: reader.py  store.py
src/ezllm/models/: downloader.py
src/ezllm/platform/: base.py  linux.py  macos.py  windows.py
src/ezllm/providers/: __init__.py  openrouter.py  registry.py  sub2.py
src/ezllm/proxy/: app.py  reasoning_mapper.py  request_normalizer.py  response_normalizer.py  routes_control.py  routes_health.py  routes_llama.py  routes_logs.py  routes_runtime.py  routes_workbench.py  streaming.py
src/ezllm/runtime/: control_actions.py  discovery.py  health.py  llama.py  manager.py  ports.py  process.py  state.py
tests/: test_cli.py
tests/cli/: test_cli.py  test_service.py
tests/compat/: test_health_routes.py  test_logs_routes.py
tests/compat/fixtures/: log_entries.jsonl
tests/config/: test_loader.py
tests/platform/: test_adapters.py
tests/proxy/: test_control_routes.py  test_llama_proxy_routes.py  test_log_capture.py  test_provider_routing.py
tests/runtime/: test_llama_command.py  test_manager.py  test_ports.py  test_process.py
