[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ezllm"
version = "0.1.0"
description = "Cross-platform local LLM runtime and CLI with legacy lm_core compatibility."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "huggingface_hub>=0.24,<1.0",
  "httpx>=0.27,<1.0",
  "pydantic>=2.8,<3.0",
  "psutil>=6.0,<7.0",
  "typer>=0.12,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.2,<9.0"]

[project.scripts]
ezllm = "ezllm.cli:app"
lm = "ezllm.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"ezllm.compat" = ["logs_page.html"]
